@@ -342,8 +342,8 @@ struct StatBonuses {
 	int16	ImprovedTaunt[3];					// 0 = Max Level 1 = Aggro modifier 2 = buffid
 	int8	Root[2];							// The lowest buff slot a root can be found. [0] = Bool if has root [1] = buff slot
 	int16	FrenziedDevastation;				// base1= AArank(used) base2= chance increase spell criticals + all DD spells 2x mana.
-	//bool	AbsorbMagicAtt;						// Magic Rune *Need to be implemented for NegateEffect
-	//bool	MeleeRune;							// Melee Rune *Need to be implemented for NegateEffect
+	uint16	AbsorbMagicAtt[2];					// 0 = magic rune value 1 = buff slot
+	uint16	MeleeRune[2];						// 0 = rune value 1 = buff slot
 
 	// AAs
 	int8	Packrat;							//weight reduction for items, 1 point = 10%
