@@ -2656,12 +2656,6 @@ void ZoneDatabase::LoadBuffs(Client *c) {
 			buffs[slot_id].ExtraDIChance = ExtraDIChance;
 			buffs[slot_id].RootBreakChance = 0;
 			buffs[slot_id].UpdateClient = false;
-			if(IsRuneSpell(spell_id)) {
-				c->SetHasRune(true);
-			}
-			else if(IsMagicRuneSpell(spell_id)) {
-				c->SetHasSpellRune(true);
-			}
 
 		}
 		mysql_free_result(result);
